# provenact-cli

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_V0_CHECKLIST.md  SECURITY.md  SPEC.md  TODO.md  audit.toml  sync-manifest.json
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS
cli/inactu-cli/: Cargo.toml  README.md
cli/inactu-cli/src/: agentskills.rs  archive.rs  constants.rs  flags.rs  install.rs  keys.rs  main.rs  runtime_exec.rs
cli/inactu-cli/tests/: archive.rs  e2e_flow.rs  experimental.rs  export_agentskills.rs  hostcalls.rs  inspect.rs  install.rs  pack_sign.rs  receipt.rs  registry_entry.rs  run.rs  threat_model_gates.rs  verify.rs
cli/provenact-cli/: Cargo.toml  README.md
cli/provenact-cli/src/: agentskills.rs  archive.rs  constants.rs  fileio.rs  install.rs  keys.rs  main.rs  preflight.rs  runtime_exec.rs
cli/provenact-cli/tests/: archive.rs  bin_alias.rs  e2e_flow.rs  experimental.rs  export_agentskills.rs  hostcalls.rs  inspect.rs  install.rs  pack_sign.rs  receipt.rs  registry_entry.rs  run.rs  threat_model_gates.rs  verify.rs
cli/provenact-cli/tests/common/: mod.rs
core/verifier/: Cargo.toml  README.md
core/verifier/src/: lib.rs  v0.rs
core/verifier/tests/: capability_eval_vectors.rs  manifest_v1_draft_vectors.rs  policy_vectors.rs  provenance_vectors.rs  receipt_v1_draft_vectors.rs  receipt_vectors.rs  registry_snapshot_vectors.rs  skill_format_vectors.rs  v0_vectors.rs
docs/: README.md  about-agents.md  audit-evidence-checklist.md  cdn-distribution-draft.md  compliance-controls.md  (+15 more)
(+68 files in other folders)
