[package]
name = "inactu-cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
ed25519-dalek = "2.1"
getrandom = "0.4"
inactu-verifier = { path = "../../core/verifier" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
ureq = "2"
url = "2"
wasmtime = "41.0.3"
zstd = "0.13"

[dev-dependencies]
wat = "1"
