[package]
name = "provenact-cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
autobins = false

[[bin]]
name = "provenact"
path = "src/main_provenact.rs"

[[bin]]
name = "provenact-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
ed25519-dalek = "2.1"
getrandom = "0.4"
provenact-verifier = { path = "../../core/verifier" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
ureq = "3"
url = "2"
wasmtime = "41.0.3"
zstd = "0.13"

[dev-dependencies]
filetime = "0.2"
wat = "1"
