[package]
name = "provenact-verifier"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
base64 = "0.22"
ed25519-dalek = "2.1"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
url = "2"
